6 frame rotation, lol

--- a/circumscrible.html
+++ b/circumscrible.html
@@ -33,6 +33,7 @@ body {
 	cursor: pointer;
 	z-index: 0;
 }
+
 #clickme{
 	z-index: 1;
 	position: fixed;
@@ -349,7 +350,7 @@ body {
 </head>
 <body>
 <canvas id="screen">HTML5 CANVAS 3D Drawing demo</canvas>
-<button id="clickme" >Click meh</button>
+<input type="button" id="clickme" value="Save GIF"></input>
 
 
 <!--nav-->
