--- a/circumscrible1.html
+++ b/circumscrible1.html
@@ -41,12 +41,26 @@ body {
 	background-color: white;
 }
 
-.container, #apiswf, .well, .row, .col-md-2, .col-md-10, #play_key, .form-control, .playControls, #play, #stop, #pause, #previous, #next, .btn, .btn-default, .fa{
-	z-index: 1;
-/*	position: fixed;
-	top:25%;
-	left: 25%;
-	background-color: white;*/
+.container{
+	float: left;
+	width: 10%;
+}
+.container, #apiswf, .well, .row, .col-md-2, .col-md-10, #play_key, .form-control, .playControls, #play, #stop, #pause, #previous, #next, .btn, .btn-default, .fa, .artistAlbumInfo{
+	z-index: 2;
+/*	position: fixed;*/
+/*	top:25%;
+	left: 25%;*/
+/*	width: 300px;*/
+	/*background-color: white;*/
+/*	color: white;*/
+}
+.artistAlbumInfo img{
+/*	float: right;*/
+	width: 100%;
+}
+.offright{
+	width:90%;
+	float:right;
 }
 
 </style>
@@ -362,14 +376,14 @@ body {
 </head>
 <body>
 
-<div class="container">
 
+<div class="container">
     <div id="apiswf"></div>
       <div class="well" style="overflow: hidden;">
         <div class="row" style="margin-bottom: 10px;">
           <div class="col-md-2">Enter Album Key</div>
           <div class="col-md-10">
-            <input id="play_key" class="form-control" value="a239851">
+            <input id="play_key" class="form-control" value="rr139688">
           </div>
         </div>
         <div class="row">
@@ -385,17 +399,21 @@ body {
 
         </div>
       </div>
-<!--       <div class="row well">
+      <div class="row well">
         <div class="artistAlbumInfo well col-md-6 ">
           <h3><span id="artist"></span> - <span id="track"></span></h3>
           <img src="" id="art" class="albumArt">
         </div>
 
-      </div> -->
+      </div>
 </div>
 
-<canvas id="screen">HTML5 CANVAS 3D Drawing demo</canvas>
-<button id="clickme" >Click meh</button>
+<div class="offright">
+	<canvas id="screen">HTML5 CANVAS 3D Drawing demo</canvas>
+	<button id="clickme" >Click meh</button>
+</div>
+
+
 
 
 
